// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu matches snapshots 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="sc-bczRLJ Ecumh"
    data-rac=""
    id="react-aria-1"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu matches snapshots 2`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="sc-bczRLJ ilnBtE"
    data-rac=""
    id="react-aria-4"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;
